--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -12,6 +12,9 @@
 <body>
    <!-- Include the script that builds the page and powers Decap CMS -->
    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+   <script>
+      CMS.registerPreviewStyle("./styles.css");
+   </script>
 </body>
 
 </html>
